--- a/assets/style.css
+++ b/assets/style.css
@@ -113,6 +113,20 @@ picture img {
     
 }
 
+.iframe-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; 
+  height: 0;
+}
+.iframe-container iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .list {
     display: inline-block;
     margin-right: 10em;
