--- a/assets/style.css
+++ b/assets/style.css
@@ -118,17 +118,19 @@ picture img {
 }
 
 .iframe-container{
-  position: relative;
-  width: 100%;
-  padding-bottom: 56.25%; 
-  height: 0;
+    position: relative;
+    width: 95%;
+    padding-bottom: 56.25%; 
+    height: 0;
+    left: 50%;
+    transform: translateX(-50%);
 }
 .iframe-container iframe{
-  position: absolute;
-  top:0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .list {
