consertado css tag picture para navegadores mozilla

--- a/assets/style.css
+++ b/assets/style.css
@@ -110,6 +110,7 @@ picture img {
     height: auto;
     margin: auto;
     max-width: fit-content;
+    max-width: -moz-fit-content;
 }
 
 #container-versions p {
