--- a/assets/style.css
+++ b/assets/style.css
@@ -53,10 +53,12 @@ nav a {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    border-radius: 5px;
+    transition: .3;
 }
 
 nav a:hover {
-    background-color: white;
+    background-color: #7efcae;
     color: #387039;
 }
 
@@ -68,6 +70,10 @@ main {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     box-shadow: 0px 3px 6px 1px rgb(0 0 0 / 55%);
+}
+
+main p {
+    text-indent: 25px;
 }
 
 .content {
@@ -126,6 +132,7 @@ picture img {
     left: 50%;
     transform: translateX(-50%);
 }
+
 .iframe-container iframe{
     position: absolute;
     top:0;
