--- a/assets/style.css
+++ b/assets/style.css
@@ -25,6 +25,16 @@ body {
     box-sizing: border-box;
 }
 
+a {
+    color: var(--cor4);
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 main h1 {
     font-family: Idroid, Arial, Helvetica, sans-serif;
     text-align: start;
@@ -134,6 +144,7 @@ aside p {
 
 aside ul {
     columns: 2;
+    list-style-type: '\2714\00A0'; /* não compatível com todos os navegadores */
 }
 
 li {
